# agent-is-all-you-need

./: .env.example  .gitignore  01_build_bash_agent.py  LICENSE  Makefile  README.md  ch_01_bash_agent.py  ch_01_build_bash_agent.py  ch_02_multi_tool_agent.py  ch_03_planning_agent.py  ch_04_subagent.py  ch_04_subagent_agent.py  ch_05_skills.py  ch_05_skills_agent.py  ch_06_context_compact.py  pyproject.toml
skills/code_review/: SKILL.md
skills/doc_writer/: SKILL.md
skills/test_generator/: SKILL.md
tests/: conftest.py  test_bash_agent.py  test_ch_01_bash_agent.py  test_ch_02_multi_tool_agent.py  test_ch_03_planning_agent.py  test_ch_04_subagent.py  test_ch_04_subagent_agent.py  test_ch_05_skills.py  test_ch_05_skills_agent.py  test_ch_06_context_compact.py  test_multi_tool_agent.py
tests/agent/: conftest.py  test_ch_01_bash_agent.py  test_ch_02_multi_tool_agent.py  test_ch_03_planning_agent.py  test_ch_04_subagent.py  test_ch_05_skills.py  test_ch_05_skills_agent.py  test_ch_06_context_compact.py
