[project]
name = "agent-is-all-you-need"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Curt Park", email = "www.jwpark.co.kr@gmail.com" },
]

dependencies = [
    "openai >= 2.28.0",
    "pydantic >= 2.12.5",
    "python-dotenv >= 1.1.0",
    "docstring-parser>=0.17.0",
    "ddgs>=9.11.4",
    "ruff>=0.14.3",
    "pytest>=8.4.2",
    "pytest-xdist>=3.8.0",
    "pytest-cov>=7.0.0",
]

[tool.ruff]
line-length = 128
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "PIE", # flake8-pie
    "SIM", # flake8-simplify
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-n", "auto",
    "--ignore=tests/agent",
]

[tool.coverage.run]
source = [
    "ch_01_bash_agent",
    "ch_02_multi_tool_agent",
    "ch_03_planning_agent",
    "ch_04_subagent",
    "ch_05_skills_agent",
]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "if __name__",
    "def main",
]

